Formation HTML5 : chap sur les formulaires

--- a/NoirEtBlanc/merci.html
+++ b/NoirEtBlanc/merci.html
@@ -21,9 +21,11 @@
             <button id="menuToggle"><img src="images/layout/hamburger.svg" alt="Ouvrir / Fermer le menu"/></button>
         </header><!-- mainHeader end -->
 
-        <section id="pageContent">
-            
-        </section><!-- pageContent end -->
+        <main>
+            <h1>Merci</h1>
+            <p>Merci pour votre message. Notre équipe reprendra contact avec vous dans les 3 jours ouvrables.</p>
+            <p>&Agrave; très bientôt</p>
+        </main>
 
         <footer id="mainFooter">
             <p>&copy; Copyright Mathieu Barthès 2022</p>
