--- a/NoirEtBlanc/blog.html
+++ b/NoirEtBlanc/blog.html
@@ -13,7 +13,7 @@
                 <ul>
                     <li><a href="#">Accueil</a></li>
                     <li><a href="#">Galeries</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                     <li><a href="#">&Agrave; propos</a></li>
                     <li><a href="blog.html">Blog</a></li>
                 </ul>
