formation HTML5 chap 8 : finalisation du site

--- a/NoirEtBlanc/bretagne2019.html
+++ b/NoirEtBlanc/bretagne2019.html
@@ -25,13 +25,19 @@
             <button id="menuToggle"><img src="images/layout/hamburger.svg" alt="Ouvrir / Fermer le menu"/></button>
         </header><!-- mainHeader end -->
 
-        <section id="pageContent" class="oneCol text">
-            <main>
-                <h1>Merci</h1>
-                <p>Merci pour votre message. Notre équipe reprendra contact avec vous dans les 3 jours ouvrables.</p>
-                <p>&Agrave; très bientôt</p>
+        <section id="pageContent" class="oneCol galleries">
+            <main class="singleGallery">
+                <ul>
+                    <li><img src="/images/image-1.jpg" alt="Plage de Bretagne"></li>
+                    <li><img src="/images/image-2.jpg" alt="Cadre dans le cadre"></li>
+                    <li><img src="/images/image-3.jpg" alt="Vigie minérale"></li>
+                    <li><img src="/images/image-4.jpg" alt="Les cheveux du ciel"></li>
+                    <li><img src="/images/image-5.jpg" alt="Prendre le large"></li>
+                    <li><img src="/images/image-6.jpg" alt="Manan les p'tits bateaux"></li>
+                </ul>
             </main>
-        </section>
+            <h1>Bretagne 2019</h1>
+        </section><!-- pageContent end -->
 
         <footer id="mainFooter">
             <p>&copy; Copyright Mathieu Barthès 2022</p>
