--- a/NoirEtBlanc/galleries.html
+++ b/NoirEtBlanc/galleries.html
@@ -25,13 +25,26 @@
             <button id="menuToggle"><img src="images/layout/hamburger.svg" alt="Ouvrir / Fermer le menu"/></button>
         </header><!-- mainHeader end -->
 
-        <section id="pageContent" class="oneCol text">
+        <section id="pageContent" class="galleries">
             <main>
-                <h1>Merci</h1>
-                <p>Merci pour votre message. Notre équipe reprendra contact avec vous dans les 3 jours ouvrables.</p>
-                <p>&Agrave; très bientôt</p>
+                <h1>Galeries</h1>
+                <ul>
+                    <li>
+                        <a href="bretagne2019.html">
+                            <h2>Bretagne 2019</h2>
+                            <img src="/images/image-1.jpg" alt="Bretagne 2019">
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda magni commodi unde voluptatibus illum deserunt alias, praesentium animi beatae dolores similique voluptatum tempora maiores minima iste delectus, quisquam soluta incidunt.</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="sacramento2017.html">
+                            <h2>Sacramento 2017</h2>
+                            <p><img src="/images/image-8.jpg" alt="Sacramento 2017">Repellat in vel iusto, corrupti eligendi molestiae illo quibusdam ratione culpa facere voluptatibus sint nihil accusamus expedita quasi rerum vitae ab? Saepe est molestiae magni similique harum possimus deserunt odio.</p>
+                        </a>
+                    </li>
+                </ul>
             </main>
-        </section>
+        </section><!-- pageContent end -->
 
         <footer id="mainFooter">
             <p>&copy; Copyright Mathieu Barthès 2022</p>
