--- a/NoirEtBlanc/index.html
+++ b/NoirEtBlanc/index.html
@@ -25,13 +25,15 @@
             <button id="menuToggle"><img src="images/layout/hamburger.svg" alt="Ouvrir / Fermer le menu"/></button>
         </header><!-- mainHeader end -->
 
-        <section id="pageContent" class="oneCol text">
+        <section id="pageContent" class="oneCol home">
             <main>
-                <h1>Merci</h1>
-                <p>Merci pour votre message. Notre équipe reprendra contact avec vous dans les 3 jours ouvrables.</p>
-                <p>&Agrave; très bientôt</p>
+                <div id="pictInfo">
+                    <h1>Plage de Bretagne</h1>
+                    <p>Damien Bruyndonckx</p>
+                    <p>100 ISO - 18 mm - f/22 - 302 sec</p>
+                </div>
             </main>
-        </section>
+        </section><!-- pageContent end -->
 
         <footer id="mainFooter">
             <p>&copy; Copyright Mathieu Barthès 2022</p>
