--- a/NoirEtBlanc/sacramento2017.html
+++ b/NoirEtBlanc/sacramento2017.html
@@ -25,13 +25,21 @@
             <button id="menuToggle"><img src="images/layout/hamburger.svg" alt="Ouvrir / Fermer le menu"/></button>
         </header><!-- mainHeader end -->
 
-        <section id="pageContent" class="oneCol text">
-            <main>
-                <h1>Merci</h1>
-                <p>Merci pour votre message. Notre équipe reprendra contact avec vous dans les 3 jours ouvrables.</p>
-                <p>&Agrave; très bientôt</p>
+        <section id="pageContent" class="galleries">
+            <main class="SingleGallery">
+                <h1>Sacramento 2017</h1>
+                <ul>
+                    <li><img src="/images/image-7.jpg" alt="A l'ombre des palmiers"></li>
+                    <li><img src="/images/image-8.jpg" alt="Pont d'or"></li>
+                    <li><img src="/images/image-9.jpg" alt="Banc"></li>
+                    <li><img src="/images/image-10.jpg" alt="Au bout de l'ombre"></li>
+                    <li><img src="/images/image-11.jpg" alt="CA Capitol"></li>
+                    <li><img src="/images/image-12.jpg" alt="Palmier"></li>
+                    <li><img src="/images/image-13.jpg" alt="Reflets urbains"></li>
+                    <li><img src="/images/image-14.jpg" alt="Lucide?"></li>
+                </ul>
             </main>
-        </section>
+        </section><!-- pageContent end -->
 
         <footer id="mainFooter">
             <p>&copy; Copyright Mathieu Barthès 2022</p>
