--- a/NoirEtBlanc/blog.html
+++ b/NoirEtBlanc/blog.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <title>Le monde en noir &amp; blanc</title>
+        <link rel="stylesheet" href="/css/normalize.css" />
+        <link rel="stylesheet" href="/css/nb.css" />
+        <script src="/js/jquery-3.4.1.min.js"></script>
+        <script src="/js/menu.js"></script>
     </head>
 
     <body>
@@ -11,17 +15,17 @@
             <h1>Le monde en noir &amp; blanc</h1>
             <nav id="mainNav">
                 <ul>
-                    <li><a href="#">Accueil</a></li>
-                    <li><a href="#">Galeries</a></li>
+                    <li><a href="index.html">Accueil</a></li>
+                    <li><a href="galleries.html">Galeries</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="#">&Agrave; propos</a></li>
+                    <li><a href="about.html">&Agrave; propos</a></li>
                     <li><a href="blog.html">Blog</a></li>
                 </ul>
             </nav>
             <button id="menuToggle"><img src="images/layout/hamburger.svg" alt="Ouvrir / Fermer le menu"/></button>
         </header><!-- mainHeader end -->
 
-        <section id="pageContent">
+        <section id="pageContent" class="twoCols blogList blog">
             <main id="leftCol">
                 <article>
                     <header>
@@ -51,7 +55,46 @@
                     <p><a href="singleBlog.html">Lire la suite</a></p>
                 </article><!-- fin du 3è article -->
             </main><!-- leftCol end -->
-            <aside id="rightCol"></aside><!-- rightCol end -->
+            <aside id="rightCol">
+                <section id="blogSearch">
+                    <h1><label for="search">Rechercher</label></h1>
+                    <input type="search" name="search" id="search">
+                </section>
+                <section id="categories">
+                    <h1>Catégories</h1>
+                    <ul>
+                        <li><a href="#">Matériel <span>11</span></a></li>
+                        <li><a href="#">Lightroom <span>2</span></a></li>
+                        <li><a href="#">Techniques <span>4</span></a></li>
+                        <li><a href="#">Voyages <span>15</span></a></li>
+                    </ul>>
+                </section>
+                <section id="blogArchives">
+                    <h1>Archives</h1>
+                    <div>
+                        <h2><a href="#">2018 <span>21</span></a></h2>
+                        <ul>
+                            <li><a href="#">Janvier 2018 <span>2</span></a></li>
+                            <li><a href="#">Février 2018 <span>4</span></a></li>
+                            <li><a href="#">Avril 2018 <span>3</span></a></li>
+                            <li><a href="#">Mai 2018 <span>3</span></a></li>
+                            <li><a href="#">Juin 2018 <span>4</span></a></li>
+                            <li><a href="#">Septembre 2018 <span>3</span></a></li>
+                            <li><a href="#">Décembre 2018 <span>2</span></a></li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h2><a href="#">2019 <span>11</span></a></h2>
+                        <ul>
+                            <li><a href="#">Janvier 2019 <span>3</span></a></li>
+                            <li><a href="#">Février 2019 <span>1</span></a></li>
+                            <li><a href="#">Mars 2019 <span>2</span></a></li>
+                            <li><a href="#">Mai 2019 <span>4</span></a></li>
+                            <li><a href="#">Septembre 2019 <span>1</span></a></li>
+                        </ul>
+                    </div>
+                </section>
+            </aside><!-- rightCol end -->
         </section><!-- pageContent end -->
 
         <footer id="mainFooter">
