--- a/NoirEtBlanc/codeMinimum.html
+++ b/NoirEtBlanc/codeMinimum.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <title>Le monde en noir &amp; blanc</title>
+        <link rel="stylesheet" href="/css/normalize.css" />
+        <link rel="stylesheet" href="/css/nb.css" />
+        <script src="/js/jquery-3.4.1.min.js"></script>
+        <script src="/js/menu.js"></script>
     </head>
 
     <body>
@@ -11,10 +15,10 @@
             <h1>Le monde en noir &amp; blanc</h1>
             <nav id="mainNav">
                 <ul>
-                    <li><a href="#">Accueil</a></li>
-                    <li><a href="#">Galeries</a></li>
+                    <li><a href="index.html">Accueil</a></li>
+                    <li><a href="galleries.html">Galeries</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="#">&Agrave; propos</a></li>
+                    <li><a href="about.html">&Agrave; propos</a></li>
                     <li><a href="blog.html">Blog</a></li>
                 </ul>
             </nav>
