--- a/NoirEtBlanc/contact.html
+++ b/NoirEtBlanc/contact.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <title>Le monde en noir &amp; blanc</title>
+        <link rel="stylesheet" href="/css/normalize.css" />
+        <link rel="stylesheet" href="/css/nb.css" />
+        <script src="/js/jquery-3.4.1.min.js"></script>
+        <script src="/js/menu.js"></script>
     </head>
 
     <body>
@@ -11,43 +15,45 @@
             <h1>Le monde en noir &amp; blanc</h1>
             <nav id="mainNav">
                 <ul>
-                    <li><a href="#">Accueil</a></li>
-                    <li><a href="#">Galeries</a></li>
+                    <li><a href="index.html">Accueil</a></li>
+                    <li><a href="galleries.html">Galeries</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="#">&Agrave; propos</a></li>
+                    <li><a href="about.html">&Agrave; propos</a></li>
                     <li><a href="blog.html">Blog</a></li>
                 </ul>
             </nav>
             <button id="menuToggle"><img src="images/layout/hamburger.svg" alt="Ouvrir / Fermer le menu"/></button>
         </header><!-- mainHeader end -->
 
-        <main>
-            <h1>Contactez-nous</h1>
-            <p>Merci de compléter le formulaire suivant pour nous contacter. Tous les champs de ce formulaire sont requis.</p>
-            <form id="frmContact" action="merci.html">
-                <div>
+        <section id="pageContent" class="oneCol contact">
+            <main>
+                <h1>Contactez-nous</h1>
+                <p>Merci de compléter le formulaire suivant pour nous contacter. Tous les champs de ce formulaire sont requis.</p>
+                <form id="frmContact" action="merci.html">
                     <div>
-                        <label for="fName">Prénom</label>
-                        <input type="text" name="fName" id="fName" required />
+                        <div>
+                            <label for="fName">Prénom</label>
+                            <input type="text" name="fName" id="fName" required />
+                        </div>
+                        <div>
+                            <label for="lName">Nom</label>
+                            <input type="text" name="lName" id="lName" required />
+                        </div>
+                        <div>
+                            <label for="email">Votre e-mail</label>
+                            <input type="email" name="email" id="email" required />
+                        </div>
                     </div>
                     <div>
-                        <label for="lName">Nom</label>
-                        <input type="text" name="lName" id="lName" required />
+                        <div>
+                            <label for="message">Votre message</label>
+                            <textarea name="message" id="message" required></textarea>
+                        </div>
                     </div>
-                    <div>
-                        <label for="email">Votre e-mail</label>
-                        <input type="email" name="email" id="email" required />
-                    </div>
-                </div>
-                <div>
-                    <div>
-                        <label for="message">Votre message</label>
-                        <textarea name="message" id="message" required></textarea>
-                    </div>
-                </div>
-                <button type="submit">Envoyer</button>
-            </form>
-        </main>
+                    <button type="submit">Envoyer</button>
+                </form>
+            </main>
+        </section>
 
         <footer id="mainFooter">
             <p>&copy; Copyright Mathieu Barthès 2022</p>
