--- a/NoirEtBlanc/about.html
+++ b/NoirEtBlanc/about.html
@@ -14,12 +14,14 @@
             <img src="/images/layout/nb_logo.svg" alt="Logo Le monde en noir et blanc" id="logoImg" />
             <h1>Le monde en noir &amp; blanc</h1>
             <nav id="mainNav">
+                <h1 class="accessibility">Menu principal</h1>
+                <p class="accessibility"><a href="#pageContent" title="Accéder directement au contenu principal de cette page">Passer le menu</a></p>
                 <ul>
-                    <li><a href="index.html">Accueil</a></li>
-                    <li><a href="galleries.html">Galeries</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="about.html">&Agrave; propos</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="index.html" title="Vers la page d'accueil du site 'Le monde en noir et blanc'">Accueil</a></li>
+                    <li><a href="galleries.html" title="Vers les galeries photo de ce site">Galeries</a></li>
+                    <li><a href="contact.html" title="Vers la page de contact de ce site">Contact</a></li>
+                    <li><a href="about.html" title="En savoir plus sur ce site et sur son propriétaire, Damien Bruyndonckx">&Agrave; propos</a></li>
+                    <li><a href="blog.html" title="Visitez notre blog et venez discuter photographie avec les autres membres du site">Blog</a></li>
                 </ul>
             </nav>
             <button id="menuToggle"><img src="images/layout/hamburger.svg" alt="Ouvrir / Fermer le menu"/></button>
