correction menu de droite dans SingleBlog.html

--- a/NoirEtBlanc/singleBlog.html
+++ b/NoirEtBlanc/singleBlog.html
@@ -104,16 +104,16 @@
                 <section id="categories">
                     <h1>Catégories</h1>
                     <ul>
-                        <li><a href="#">Matériel</a> <span>11</span></li>
-                        <li><a href="#">Lightromm</a> <span>2</span></li>
-                        <li><a href="#">Techniques</a> <span>4</span></li>
-                        <li><a href="#">Voyages</a> <span>15</span></li>
+                        <li><a href="#">Matériel <span>11</span></a></li>
+                        <li><a href="#">Lightroom <span>2</span></a></li>
+                        <li><a href="#">Techniques <span>4</span></a></li>
+                        <li><a href="#">Voyages <span>15</span></a></li>
                     </ul>>
                 </section>
                 <section id="blogArchives">
                     <h1>Archives</h1>
                     <div>
-                        <h2><a href="#">2018</a> <span>21</span></h2>
+                        <h2><a href="#">2018 <span>21</span></a></h2>
                         <ul>
                             <li><a href="#">Janvier 2018 <span>2</span></a></li>
                             <li><a href="#">Février 2018 <span>4</span></a></li>
@@ -125,7 +125,7 @@
                         </ul>
                     </div>
                     <div>
-                        <h2><a href="#">2019</a> <span>11</span></h2>
+                        <h2><a href="#">2019 <span>11</span></a></h2>
                         <ul>
                             <li><a href="#">Janvier 2019 <span>3</span></a></li>
                             <li><a href="#">Février 2019 <span>1</span></a></li>
