Essentiel CSS chap 2 : grands principes

--- a/NoirEtBlanc/about.html
+++ b/NoirEtBlanc/about.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Le monde en noir &amp; blanc</title>
+        <link rel="stylesheet" href="/css/normalize.css" />
     </head>
 
     <body>
@@ -20,7 +21,7 @@
                     <li><a href="blog.html" title="Visitez notre blog et venez discuter photographie avec les autres membres du site">Blog</a></li>
                 </ul>
             </nav>
-            <button id="menuToggle"><img src="images/layout/hamburger.svg" alt="Ouvrir / Fermer le menu"/></button>
+            <button type="button" id="menuToggle"><img src="images/layout/hamburger.svg" alt="Ouvrir / Fermer le menu"/></button>
         </header><!-- mainHeader end -->
 
         <section id="pageContent">
