--- a/NoirEtBlanc/sacramento2017.html
+++ b/NoirEtBlanc/sacramento2017.html
@@ -20,7 +20,7 @@
                     <li><a href="blog.html" title="Visitez notre blog et venez discuter photographie avec les autres membres du site">Blog</a></li>
                 </ul>
             </nav>
-            <button id="menuToggle"><img src="images/layout/hamburger.svg" alt="Ouvrir / Fermer le menu"/></button>
+            <button type="button" id="menuToggle"><img src="images/layout/hamburger.svg" alt="Ouvrir / Fermer le menu"/></button>
         </header><!-- mainHeader end -->
 
         <section id="pageContent" class="galleries">
