Essentiel CSS chap 3 : principaux sélecteurs

--- a/NoirEtBlanc/contact.html
+++ b/NoirEtBlanc/contact.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="utf-8" />
         <title>Le monde en noir &amp; blanc</title>
+        <link rel="stylesheet" href="/css/normalize.css" />
+        <link rel="stylesheet" href="/css/nb.css" />
     </head>
-
     <body>
         <header id="mainHeader">
             <img src="/images/layout/nb_logo.svg" alt="Logo Le monde en noir et blanc" id="logoImg" />
